# parallel-data-reading

./: .gitignore  CMakeLists.txt  main.cpp
forms/: form.cpp  form.h
run/: main.cpp
src/business/: SearchParallelism.cpp  SearchParallelism.h  SearchRamMemory.cpp  SearchRamMemory.h  SearchSimple.cpp  SearchSimple.h
src/forms/: Frame.cpp  Frame.h
src/helper/: DetermineTime.cpp  DetermineTime.h  FileReader.cpp  FileReader.h  FileReaderRam.cpp  FileReaderRam.h  ParallelFileReader.cpp  ParallelFileReader.h
src/object/: GlobalVar.cpp  GlobalVar.h  Person.cpp  Person.h
src/run/: Main.cpp
